--- a/Backend/package.json
+++ b/Backend/package.json
@@ -17,6 +17,8 @@
     "dotenv": "^10.0.0",
     "email-existence": "^0.1.6",
     "express": "^4.17.1",
+    "express-fileupload": "^1.2.1",
+    "fs": "0.0.1-security",
     "mongoose": "^5.13.3",
     "nodemon": "^2.0.12"
   }
