--- a/Backend/package.json
+++ b/Backend/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "arraybuffer-to-buffer": "0.0.7",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
@@ -18,6 +19,7 @@
     "express": "^4.17.1",
     "express-fileupload": "^1.2.1",
     "fs": "0.0.1-security",
+    "mongodb": "^4.0.1",
     "mongoose": "^5.13.3",
     "nodemon": "^2.0.12"
   }
